--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.8.0",
     "next": "^9.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
